--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.0",
     "mat-video": "^2.7.2",
     "mongoose": "^5.4.16",
+    "multer": "^1.4.2",
     "rxjs": "~6.3.3",
     "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
